@@ -45,8 +45,8 @@
 ##
 ## @deftypefnx {Function File} {[@var{c}, @var{ia}, @var{ib}] =} union (@var{a}, @var{b})
 ##
-## Return index vectors @var{ia} and @var{ib} such that @code{a == c(ia)} and
-## @code{b == c(ib)}.
+## Return index vectors @var{ia} and @var{ib} such that @code{a(ia)} and @code{b(ib)} are
+## disjoint sets whose union is @var{c}.
 ## 
 ## @seealso{intersect, complement, unique}
 ## @end deftypefn
